RESOLVED FIXED211522
visualViewport.addEventListener("scroll"*** fires permanently after zoom or orientation change
https://bugs.webkit.org/show_bug.cgi?id=211522
Summary visualViewport.addEventListener("scroll"*** fires permanently after zoom or o...
juwagn
Reported 2020-05-06 11:41:36 PDT
Hello, in latest version 13.4.1 adding such code visualViewport.addEventListener("scroll", function(q) { ***** etc. function fires permanently after zoom or orientation change. It fires it approximately ~5 times a second continuously without stop. Not even page refresh helps to stop firing, after page refresh it continues to fire scroll event non-stop! Sincerely yours.
Attachments
requested attachment (2.38 KB, text/html)
2020-05-06 23:13 PDT, juwagn
no flags
Patch (4.82 KB, patch)
2020-07-02 13:06 PDT, Antoine Quint
no flags
Patch for landing (4.90 KB, patch)
2020-07-02 13:14 PDT, Antoine Quint
no flags
Radar WebKit Bug Importer
Comment 1 2020-05-06 11:41:51 PDT
Simon Fraser (smfr)
Comment 2 2020-05-06 16:07:54 PDT
Can you attach a testcase, or point to a URL that shows the issue? Thanks.
juwagn
Comment 3 2020-05-06 23:13:40 PDT
Created attachment 398706 [details] requested attachment Reproducer case. 1. on iOS 13.4.1 Safari open viewportScroll.html 2. zoom in now "scroll" event fires continuously non stop You can zoom out again, that doesn't matter, it will fire this event continuously. If you don't zoom out back but just refresh the page then issue continues too.
juwagn
Comment 4 2020-05-06 23:15:08 PDT
zoom-in with two finger gesture
Simon Fraser (smfr)
Comment 5 2020-05-07 10:40:51 PDT
Thank you.
Simon Fraser (smfr)
Comment 6 2020-05-20 07:54:25 PDT
Also reproduces on macOS.
Simon Fraser (smfr)
Comment 7 2020-05-20 08:06:11 PDT
Stupid coding error: if (m_needsVisualViewportScrollEvent) { LOG_WITH_STREAM(Events, stream << "Document" << this << "sending scroll events to visualViewport"); m_needsVisualViewportResizeEvent = false; Should be m_needsVisualViewportScrollEvent = false. Also all the double comparisons in VisualViewport::update() should probably be a bit more lenient.
Antoine Quint
Comment 8 2020-07-02 13:06:41 PDT
Simon Fraser (smfr)
Comment 9 2020-07-02 13:09:26 PDT
Comment on attachment 403390 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=403390&action=review > LayoutTests/fast/visual-viewport/scroll-event-fired-during-scroll-alone.html:36 > + }, "Verify that a scroll event gets fired on window.visualViewport when its offset changes"); This text doesn't seem right. You're verifying that only one scroll event fires.
Antoine Quint
Comment 10 2020-07-02 13:11:26 PDT
(In reply to Simon Fraser (smfr) from comment #9) > Comment on attachment 403390 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=403390&action=review > > > LayoutTests/fast/visual-viewport/scroll-event-fired-during-scroll-alone.html:36 > > + }, "Verify that a scroll event gets fired on window.visualViewport when its offset changes"); > > This text doesn't seem right. You're verifying that only one scroll event > fires. Oops, leftover from a test I copied.
Antoine Quint
Comment 11 2020-07-02 13:14:38 PDT
Created attachment 403392 [details] Patch for landing
EWS
Comment 12 2020-07-02 13:35:19 PDT
Committed r263858: <https://trac.webkit.org/changeset/263858> All reviewed patches have been landed. Closing bug and clearing flags on attachment 403392 [details].
Note You need to log in before you can comment on or make changes to this bug.