visualViewport.addEventListener("scroll"*** fires permanently after zoom or orientation change https://bugs.webkit.org/show_bug.cgi?id=211522 <rdar://problem/62939371>

Reviewed by Simon Fraser.

Source/WebCore:

Correctly set the flag indicating that a scroll event has been dispatched on the visual viewport.

Test: fast/visual-viewport/scroll-event-fired-during-scroll-alone.html

* dom/Document.cpp:
(WebCore::Document::runScrollSteps):

LayoutTests:

Add a test that checks that after a call to scrollTo() no further "scroll" events are dispatched on window.visualViewport.

* fast/visual-viewport/scroll-event-fired-during-scroll-alone-expected.txt: Added.
* fast/visual-viewport/scroll-event-fired-during-scroll-alone.html: Added.


Canonical link: https://commits.webkit.org/226699@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263858 268f45cc-cd09-0410-ab3c-d52691b4dbfc